--- a/amazed/package.json
+++ b/amazed/package.json
@@ -1,8 +1,12 @@
 {
   "name": "server",
   "version": "1.0.0",
+  "proxy": true,
+  "engines": {
+    "node": "14.x"
+  },
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "type": "module",
   "scripts": {
     "start": "node app.js",
@@ -15,6 +19,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amazed.in": "file:view/client",
     "bcryptjs": "^2.4.3",
     "concurrently": "^6.0.0",
     "cors": "^2.8.5",
@@ -27,6 +32,8 @@
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
+    "path": "^0.12.7",
+    "razorpay": "^2.0.6",
     "validator": "^13.5.2"
   }
 }
