--- a/amazed/view/client/package.json
+++ b/amazed/view/client/package.json
@@ -1,11 +1,15 @@
 {
   "name": "amazed.in",
   "version": "0.1.0",
+  "engines": {
+    "node": "6.x"
+  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "axios": "^0.21.1",
     "http-proxy-middleware": "^1.0.6",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
