--- a/amazed/package.json
+++ b/amazed/package.json
@@ -33,8 +33,10 @@
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
-    "path": "^0.12.7",
     "razorpay": "^2.0.6",
     "validator": "^13.5.2"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.37"
   }
 }
