--- a/amazed/package.json
+++ b/amazed/package.json
@@ -24,6 +24,7 @@
     "concurrently": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.2.6",
     "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
@@ -32,8 +33,10 @@
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
-    "path": "^0.12.7",
     "razorpay": "^2.0.6",
     "validator": "^13.5.2"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.37"
   }
 }
